--- a/lib_base/src/main/res/values/strings.xml
+++ b/lib_base/src/main/res/values/strings.xml
@@ -15,6 +15,16 @@
 
     <string name="confirm">确定</string>
 
+    <!--多状态布局-->
+    <string name="state_layout_loading_title">加载中…</string>
+    <string name="state_layout_empty_title">暂无数据</string>
+    <string name="state_layout_empty_subtitle">页面无内容，快去找找吧！</string>
+    <string name="state_layout_failure_title">加载出现错误</string>
+    <string name="state_layout_failure_subtitle">页面好像走丢了，再试一下！</string>
+    <string name="state_layout_offline_title">网络连接已断开</string>
+    <string name="state_layout_offline_subtitle">很抱歉！请检查您的网络设置</string>
+    <!--多状态布局-->
+
 
 
 
